Context menu `Search Google for "hogehoge"` would not update for selected text or on a link
Categories
(Firefox :: Menus, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox107 | --- | unaffected |
firefox108 | --- | unaffected |
firefox109 | --- | verified |
firefox110 | --- | verified |
People
(Reporter: alice0775, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
Steps to reproduce:
- Select some text
foo
- Right click
--- Context menu indicatesSearch Google for "foo"
- Select the other text
bar
- Right click
--- Context menu still indicateSearch Google for "foo"
---BUG
OR
- Right click on a link foo
--- Context menu indicatesSearch Google for "foo"
- Right click on the other link bar
--- Context menu still indicateSearch Google for "foo"
---BUG
Actual Results:
Context menu Search Google for "xxxx"
would not update
Expected Results:
Context menu Search Google for "xxxx"
should update
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=efbd04cb07486419679cf588ba6095f7ef9edef6&tochange=fd69d6b3aeb8e1e04334a0885f60966883a69c08
Suspect: Bug 1799460
Comment 1•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1799460, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
While at it move GetAttributeChangeHint to relevant implementations.
Updated•2 years ago
|
Comment 6•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d172102d49f0
https://hg.mozilla.org/mozilla-central/rev/6f13228fb451
Does the fix also fixes the copy/paste issue listed in bug 1801203?
Updated•2 years ago
|
Reproduced on Nightly 109.0a1(build ID: 20221117093901) on Windows 10. Verified as fixed on Firefox 109.0(build ID: 20230109161414) Nightly 110.0a1(build ID: 20230110214526) on macOS 12, Windows 10, Ubuntu 22.
Description
•