Bug 1801157 - Fix dynamic value change of label/description with accesskey. r=smaug

While at it move GetAttributeChangeHint to relevant implementations.

Differential Revision: https://phabricator.services.mozilla.com/D162335