dom/xul/XULTextElement.cpp
@@ -7,13 +7,39 @@
 #include "mozilla/dom/Element.h"
 #include "mozilla/dom/ToJSValue.h"
 #include "nsCOMPtr.h"
+#include "nsChangeHint.h"
 #include "nsIContent.h"
 #include "nsPresContext.h"
 #include "nsIScrollableFrame.h"
+#include "mozilla/dom/MutationEventBinding.h"
 #include "mozilla/dom/XULTextElement.h"
 #include "mozilla/dom/XULTextElementBinding.h"
 
 namespace mozilla::dom {
+
+nsChangeHint XULTextElement::GetAttributeChangeHint(const nsAtom* aAttribute,
+                                                    int32_t aModType) const {
+  const bool reframe = [&] {
+    if (aAttribute == nsGkAtoms::value) {
+      // If we have an accesskey we need to recompute our -moz-label-content.
+      // Otherwise this is handled by either the attribute text node, or
+      // nsTextBoxFrame for crop="center".
+      return aModType == MutationEvent_Binding::ADDITION ||
+             aModType == MutationEvent_Binding::REMOVAL ||
+             HasAttr(nsGkAtoms::accesskey);
+    }
+    if (aAttribute == nsGkAtoms::crop || aAttribute == nsGkAtoms::accesskey) {
+      // value attr + crop="center" still uses nsTextBoxFrame. accesskey
+      // requires reframing as per the above comment.
+      return HasAttr(nsGkAtoms::value);
+    }
+    return false;
+  }();
+  if (reframe) {
+    return nsChangeHint_ReconstructFrame;
+  }
+  return nsXULElement::GetAttributeChangeHint(aAttribute, aModType);
+}
 
 JSObject* XULTextElement::WrapNode(JSContext* aCx,
                                    JS::Handle<JSObject*> aGivenProto) {
