dom/xul/nsXULElement.cpp
@@ -1005,35 +1005,6 @@ nsresult nsXULElement::PreHandleEvent(EventChainVisitor& aVisitor) {
 //----------------------------------------------------------------------
 // Implementation methods
 
-nsChangeHint nsXULElement::GetAttributeChangeHint(const nsAtom* aAttribute,
-                                                  int32_t aModType) const {
-  if (IsAnyOfXULElements(nsGkAtoms::label, nsGkAtoms::description)) {
-    if (aAttribute == nsGkAtoms::value &&
-        (aModType == MutationEvent_Binding::REMOVAL ||
-         aModType == MutationEvent_Binding::ADDITION)) {
-      // Label and description dynamically morph between a normal block and a
-      // cropping single-line XUL text frame.  If the
-      // value attribute is being added or removed, then we need to
-      // return a hint of frame change.  (See bugzilla bug 95475 for
-      // details.)
-      return nsChangeHint_ReconstructFrame;
-    }
-    if ((aAttribute == nsGkAtoms::crop || aAttribute == nsGkAtoms::accesskey) &&
-        HasAttr(nsGkAtoms::value)) {
-      // They also can change based on crop="center", or accesskey.
-      return nsChangeHint_ReconstructFrame;
-    }
-  }
-
-  if (aAttribute == nsGkAtoms::type &&
-      IsAnyOfXULElements(nsGkAtoms::toolbarbutton, nsGkAtoms::button)) {
-    // type=menu switches from a button frame to a menu frame.
-    return nsChangeHint_ReconstructFrame;
-  }
-
-  return nsChangeHint(0);
-}
-
 NS_IMETHODIMP_(bool)
 nsXULElement::IsAttributeMapped(const nsAtom* aAttribute) const {
   return false;
